Improve library management